@@ -1,5 +1,7 @@
 package com.model_store.configuration;
 
+import com.model_store.configuration.property.ApplicationProperties;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,18 +9,25 @@ import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
+@RequiredArgsConstructor
 public class CorsConfig {
+
+    private final ApplicationProperties applicationProperties;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOriginPatterns(Collections.singletonList("*")); // Разрешить все источники
-        corsConfig.addAllowedMethod("*"); // Разрешить все HTTP-методы
-        corsConfig.addAllowedHeader("*"); // Разрешить все заголовки
-        corsConfig.setAllowCredentials(true); // Разрешить отправку куков/учётных данных
+        if (applicationProperties.isCorsAllowAll()) {
+            corsConfig.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            corsConfig.setAllowedOriginPatterns(applicationProperties.getAllowedOrigins());
+        }
+        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        corsConfig.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
+        corsConfig.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfig);
